初始版本完善

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "ant-design-vue": "1.7.1",
     "axios": "^0.21.1",
     "js-cookie": "^2.2.1",
+    "pako": "^2.0.3",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
