--- a/package.json
+++ b/package.json
@@ -3,14 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service build --mode development --watch",
-    "build": "vue-cli-service build",
+    "serve": "vue-cli-service build --mode dev --watch",
+    "build": "vue-cli-service build --mode prod",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "ant-design-vue": "1.7.1",
     "axios": "^0.21.1",
-    "js-cookie": "^2.2.1",
     "pako": "^2.0.3",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
