--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,9 +1,10 @@
 {
   "manifest_version": 2,
-  "name": "__MSG_extName__",
-  "homepage_url": "http://localhost:8080/",
-  "description": "A Vue Browser Extension",
-  "default_locale": "en",
+  "name": "Huobi market",
+  "version":"1.0.1",
+  "homepage_url": "https://github.com/jsonwu5/huobi-market",
+  "description": "A Huobi market Browser Extension",
+  "default_locale": "zh_CN",
   "permissions": [
     "<all_urls>",
     "*://*/*"
@@ -21,7 +22,7 @@
   },
   "browser_action": {
     "default_popup": "popup.html",
-    "default_title": "__MSG_extName__",
+    "default_title": "火币行情chrome扩展",
     "default_icon": {
       "19": "icons/19.png",
       "38": "icons/38.png"
