--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "huobi-market",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service build --mode dev --watch",
@@ -11,6 +11,7 @@
     "ant-design-vue": "1.7.1",
     "axios": "^0.21.1",
     "pako": "^2.0.3",
+    "number-precision": "^1.3.2",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
