--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "scripts": {
     "serve": "vue-cli-service build --mode dev --watch",
     "build": "vue-cli-service build --mode prod",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "devtools": "vue-devtools",
+    "dev": "npm-run-all -p devtools serve"
   },
   "dependencies": {
     "ant-design-vue": "1.7.1",
     "axios": "^0.21.1",
-    "pako": "^2.0.3",
+    "npm-run-all": "^4.1.5",
     "number-precision": "^1.3.2",
+    "pako": "^2.0.3",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
@@ -22,15 +25,16 @@
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "@vue/devtools": "~5.2.0",
     "@vue/eslint-config-prettier": "^6.0.0",
-    "core-js": "^3.6.5",
     "babel-eslint": "^10.1.0",
+    "core-js": "^3.6.5",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
-    "prettier": "^1.19.1",
     "less": "^3.12.2",
     "less-loader": "7.0.2",
+    "prettier": "^1.19.1",
     "vue-cli-plugin-browser-extension": "latest",
     "vue-template-compiler": "^2.6.11"
   }
