--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "huobi-market",
   "version": "1.0.10",
   "private": true,
+  "description": "A Huobi market Browser Extension",
+  "author": "JasonWu <ilovecqr@gmail.com>",
+  "license": "MIT",
   "scripts": {
     "serve": "vue-cli-service build --mode dev --watch",
     "build": "vue-cli-service build --mode prod",
@@ -9,6 +12,14 @@
     "devtools": "vue-devtools",
     "dev": "npm-run-all -p devtools serve"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jsonwu5/huobi-market"
+  },
+  "bugs": {
+    "url": "https://github.com/jsonwu5/huobi-market/issues"
+  },
+  "homepage": "https://github.com/jsonwu5/huobi-market#readme",
   "dependencies": {
     "ant-design-vue": "1.7.1",
     "axios": "^0.21.1",
