--- a/.env.dev
+++ b/.env.dev
@@ -1,3 +1,3 @@
 NODE_ENV = 'development'
-VUE_APP_BASEURL = 'https://api.huobi.pro/v1'
+VUE_APP_BASEURL = 'https://api.huobi.pro'
 VUE_APP_WS = 'wss://api-aws.huobi.pro/ws'
