--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 2,
-  "name": "Huobi market",
+  "name": "__MSG_extName__",
   "homepage_url": "https://github.com/jsonwu5/huobi-market",
-  "description": "A Huobi market Browser Extension",
+  "description": "__MSG_extDes__",
   "default_locale": "zh_CN",
   "icons": {
     "16": "icons/16.png",
@@ -17,7 +17,7 @@
   },
   "browser_action": {
     "default_popup": "popup.html",
-    "default_title": "火币行情chrome扩展",
+    "default_title": "__MSG_extDefTitle__",
     "default_icon": {
       "19": "icons/19.png",
       "38": "icons/38.png"
