--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "number-precision": "^1.3.2",
     "pako": "^2.0.3",
     "vue": "^2.6.11",
+    "vue-draggable-resizable": "^2.1.0",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
