--- a/src/manifest.json
+++ b/src/manifest.json
@@ -13,7 +13,7 @@
     "scripts": [
       "js/background.js"
     ],
-    "persistent": false
+    "persistent": true
   },
   "browser_action": {
     "default_popup": "popup.html",
