--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "ant-design-vue": "1.7.1",
     "axios": "^0.21.1",
+    "file-saver": "^2.0.5",
     "npm-run-all": "^4.1.5",
     "number-precision": "^1.3.2",
     "pako": "^2.0.3",
