--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "ant-design-vue": "1.7.3",
     "axios": "^0.21.1",
     "file-saver": "^2.0.5",
+    "moment": "^2.29.1",
     "npm-run-all": "^4.1.5",
     "number-precision": "^1.3.2",
     "pako": "^2.0.3",
+    "crypto-js": "^3.1.9-1",
     "vue": "^2.6.11",
     "vue-draggable-resizable": "^2.1.0",
     "vuex": "^3.4.0"
