--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   "dependencies": {
     "ant-design-vue": "1.7.3",
     "axios": "^0.21.1",
+    "chrome-storage-largesync": "0.0.4",
+    "crypto-js": "^3.1.9-1",
     "file-saver": "^2.0.5",
     "npm-run-all": "^4.1.5",
     "number-precision": "^1.3.2",
