--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "chrome-storage-largesync": "0.0.4",
     "crypto-js": "^3.1.9-1",
     "file-saver": "^2.0.5",
+    "marked": "^2.0.3",
     "moment": "^2.29.1",
     "npm-run-all": "^4.1.5",
     "number-precision": "^1.3.2",
