--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "npm-run-all": "^4.1.5",
     "number-precision": "^1.3.2",
     "pako": "^2.0.3",
+    "qrcode": "^1.4.4",
     "vue": "^2.6.11",
     "vue-draggable-resizable": "^2.1.0",
     "vuex": "^3.4.0"
