--- a/src/manifest.json
+++ b/src/manifest.json
@@ -5,7 +5,8 @@
   "description": "__MSG_extDes__",
   "default_locale": "zh_CN",
   "permissions": [
-    "storage"
+    "storage",
+    "contextMenus"
   ],
   "icons": {
     "16": "icons/16.png",
